Changed name to Hangman

--- a/HelloWorld/Hangman.csproj
+++ b/HelloWorld/Hangman.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7D86ECC6-677A-47EC-B4AD-A691A793DEC2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HelloWorld</RootNamespace>
-    <AssemblyName>HelloWorld</AssemblyName>
+    <RootNamespace>Hangman</RootNamespace>
+    <AssemblyName>Hangman</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
